--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
+body {
+  background-color: rgb(2, 2, 37);
+}
+
+.main_div {
+  display: flex;
+  justify-content: center;
+  margin-top: 8.5vh;
+}
+
+.logoimg {
+  width: 10%;
+  object-fit: contain;
+}
+
+.text_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+
+}
+
+.text_div h2 {
+  color: #fff;
+}
+
+.input_field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2vh;
+}
+
+.input_field input {
+  width: 25vw;
+  height: 5.5vh;
+  outline: none;
+  border: none;
+  font-size: 22px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.showItems {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.showItem {
+  width: 25vw;
+  border-radius: 5px;
+  font-size: 20px;
+  height: 5vh;
+  background-color: #fff;
+  margin-right: 6vw;
+  position: relative;
+  margin-left: 2.5vw;
+  margin-top: 20px;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  padding: 22px;
+  background-color: red;
+  border: none;
+  color: #fff;
+}
+
+.main {
+  position: absolute;
+  right: 4px;
+  top: 5px;
+}
+
+
+.btn_style {
+  padding: 0.4rem 0.8rem;
+  background-color: rgb(107, 45, 116);
+  outline: none;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 3px;
+  margin-left: 1rem;
+}
+
+.btn_styl {
+  padding: 0.4rem 0.8rem;
+  background-color: rgb(107, 45, 116);
+  outline: none;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 3px;
+  margin-top: 6vh;
+  margin-left: 35vw;
+}
+
+.btnContainer {
+  display: flex;
+  justify-content: center;
 }
