--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,6 @@ body {
 
 
 .btn_style {
-  padding: 1.4rem 0.8rem;
   background-color: rgb(107, 45, 116);
   outline: none;
   border: none;
@@ -86,6 +85,10 @@ body {
   font-size: 18px;
   cursor: pointer;
   border-radius: 3px;
+  padding-bottom: 24px;
+  padding-top: 23.5px;
+  padding-left: 18px;
+  padding-right: 18px;
 
 }
 
